creusot/tests/should_fail/prusti/at_expiry/infer_param.stderr
error: at must be given an explicit region
 --> infer_param.rs:4:20
  |
4 | #[after_expiry('a, at::<'_>(true))]
  |                    ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

